version: "0.1.2"
opam-version: "2.0"
name: "scratch"
maintainer: "ifazk@users.noreply.github.com"
authors: ["Ifaz Kabir"]
homepage: "https://github.com/ifazk/itis"
bug-reports: "https://github.com/ifazk/itis"
license: "MIT"
synopsis: "Warn about uses of it's in latex files"

build: [
  ["dune" "build" "-p" name]
]

depends: [
  "dune" {build & >= "1.6.3"}
  "base" {build}
  "fmt" {build}
  "menhir" {build}
]
